[gd_scene load_steps=6 format=3 uid="uid://5ymyasuqnyu3"]

[ext_resource type="Script" path="res://TestScene3/Scenes/Projectile.gd" id="1_3f8sc"]
[ext_resource type="Texture2D" uid="uid://cxwlsiyte86o5" path="res://Bubbles/Coloured/16x16/bubble_1.png" id="2_tlff1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rtph7"]
radius = 8.24621

[sub_resource type="SpriteFrames" id="SpriteFrames_t1nkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tlff1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gq0t"]
radius = 95.5249

[node name="Projectile" type="Area2D"]
top_level = true
position = Vector2(249, 191)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_3f8sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rtph7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t1nkq")

[node name="Lifespan" type="Timer" parent="."]
wait_time = 5.0

[node name="DetectionAreaHitbox" type="Area2D" parent="."]
process_mode = 4
visible = false
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionAreaHitbox"]
process_mode = 1
visible = false
shape = SubResource("CircleShape2D_5gq0t")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_lifespan_timeout"]
[connection signal="area_entered" from="DetectionAreaHitbox" to="." method="_on_detection_area_hitbox_area_entered"]
